force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <label>Question</label>
    <pluralLabel>Questions</pluralLabel>
    <nameField>
        <label>Question Name</label>
        <type>AutoNumber</type>
        <displayFormat>Q-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel> <!-- Controlled by Survey__c -->
</CustomObject> 