force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Question__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <label>Is Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField> 