force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Question__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <label>Question Text</label>
    <type>LongTextArea</type>
    <length>1000</length> <!-- Adjust length as needed -->
</CustomField> 