force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Question__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <label>Survey</label>
    <type>MasterDetail</type>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <referenceTo>Survey__c</referenceTo>
</CustomField> 